--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "learning-plataform-front",
+  "proxy": "http://127.0.0.1:3030",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -14,7 +15,11 @@
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "@hookform/resolvers": "^3.3.4",
+    "axios": "^1.6.5",
+    "dotenv": "^16.4.1",
     "framer-motion": "^10.17.9",
+    "qs": "^6.11.2",
+    "query-string": "^8.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.3",
@@ -24,16 +29,19 @@
     "yup": "^1.3.3"
   },
   "devDependencies": {
+    "@types/cypress": "^1.1.3",
+    "@types/qs": "^6.9.11",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "@types/yup": "^0.32.0",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
     "@typescript-eslint/parser": "^6.14.0",
     "@vitejs/plugin-react": "^4.2.1",
+    "cypress": "^13.6.4",
     "eslint": "^8.55.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
     "typescript": "^5.2.2",
-    "vite": "^5.0.8"
+    "vite": "^5.1.3"
   }
 }
